--- a/sass/nav/_mobile.scss
+++ b/sass/nav/_mobile.scss
@@ -34,6 +34,7 @@
   z-index: 10;
 }
 .top-nav__banner--link > svg {
+  background: transparent;
   height: 32px;
   height: 3.2rem;
   left: 23px;
